# QtViewer

./: .gitignore  CMakeLists.txt  QtViewer.pro  generatedialog.cpp  generatedialog.h  generatedialog.ui  icons.qrc  index.html  magneticcircle.cpp  magneticcircle.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mygraphicsscene.cpp  mygraphicsscene.h  mygraphicsview.cpp  mygraphicsview.h  params.json  partgraphicsitem.cpp  partgraphicsitem.h  statechangedialog.cpp  statechangedialog.h  statechangedialog.ui  systemproperties.cpp  systemproperties.h  systemproperties.ui  systemproperties_old.ui
deploy/: windows.iss  windows_x32.iss  windows_x64.iss
deploy/examples/: HC_10x10.mfsys  HC_5x5.mfsys  SSI_20x20.mfsys  honeycombspinice_10x10.mfsys  honeycombspinice_11x11.mfsys  honeycombspinice_12x12.mfsys  honeycombspinice_13x13.mfsys  honeycombspinice_14x14.mfsys  honeycombspinice_15x15.mfsys  honeycombspinice_16x16.mfsys  honeycombspinice_17x17.mfsys  honeycombspinice_18x18.mfsys  honeycombspinice_19x19.mfsys  honeycombspinice_20x20.mfsys  honeycombspinice_21x21.mfsys  honeycombspinice_22x22.mfsys  honeycombspinice_23x23.mfsys  honeycombspinice_24x24.mfsys  honeycombspinice_25x25.mfsys  honeycombspinice_26x26.mfsys  honeycombspinice_27x27.mfsys  honeycombspinice_28x28.mfsys  honeycombspinice_29x29.mfsys  (+132 more)
examples/: HC_24.mfsys  HC_3x3.mfsys  SSI_10x10.mfsys  SSI_12.mfsys  SSI_1x1.mfsys  SSI_24.mfsys  SSI_2x2.mfsys  SSI_30x30.mfsys  SSI_3x3.mfsys  SSI_40x40.mfsys  SSI_4x4.mfsys  SSI_5x5.mfsys  lattice_2x2.mfsys  lattice_3x3.mfsys  lattice_4x4.mfsys
icons/: oldicon.ai
(+5 files in other folders)
